2007-07-22  Satoshi Nakagawa <artension@gmail.com>

	Changed to ensure server dialogs and channel dialogs are in visibleRect of the screen.
	Added utility functions to NSRect, NSSize and NSPoint.

2007-07-22  Satoshi Nakagawa <artension@gmail.com>

	Changed to place server dialogs and channel dialogs in center of the main window.

2007-07-22  Satoshi Nakagawa <artension@gmail.com>

	Added quitting confirmation when there are some DCC file transfers.

2007-07-21  Satoshi Nakagawa <artension@gmail.com>

	Fixed a bug, file sending maybe disconnected before complete.

2007-07-21  Satoshi Nakagawa <artension@gmail.com>

	Changed to avoid calling reloadData in reloadData.
	Removed RUBYCOCOA_THREAD_HOOK_DISABLE = 1.

2007-07-21  Satoshi Nakagawa <artension@gmail.com>

	Moved RUBYCOCOA_THREAD_HOOK_DISABLE = 1 to main.m.

2007-07-20  Satoshi Nakagawa <artension@gmail.com>

	Changed initial location of windows.

2007-07-15  Satoshi Nakagawa <artension@gmail.com>

	Added an option, confirm to quit the application.
	Changed to display 'specify address' caption in gray color when it is disabled.

2007-07-15  Satoshi Nakagawa <artension@gmail.com>

	Changed to save preferences under 'pref' group.

2007-07-15  Satoshi Nakagawa <artension@gmail.com>

	Added encodings support:
		Latin-3, Latin-4, Latin-7, Latin-9,
		Korean CP949, GBK, GB18030, BIG5,
		KOI-8R, ISO-8859-5, ISO-8859-8.

2007-07-14  Satoshi Nakagawa <artension@gmail.com>

	Added confirmation dialog on quitting.

2007-07-14  Satoshi Nakagawa <artension@gmail.com>

	Added small scroller support on the code level.

2007-07-14  Satoshi Nakagawa <artension@gmail.com>

	Added support for \r as new line.

2007-07-13  Satoshi Nakagawa <artension@gmail.com>

	Changed to parse inputted commands: msg, privmsg, notice, action, nick, quit.

2007-07-13  Satoshi Nakagawa <artension@gmail.com>

	Fixed a bug, reporting an error even when DCC file sending completed successfully.

2007-07-12  Satoshi Nakagawa <artension@gmail.com>
