@@ -13,6 +13,7 @@ class PreferenceDialog < OSX::NSObject
   ib_mapped_outlet :dcc_address_detection_method, :dcc_myaddress
   ib_mapped_int_outlet :dcc_first_port, :dcc_last_port
   ib_mapped_outlet :gen_confirm_quit
+  ib_mapped_outlet :gen_connect_on_doubleclick, :gen_disconnect_on_doubleclick, :gen_join_on_doubleclick, :gen_leave_on_doubleclick
   
   def initialize
     @prefix = 'preferenceDialog'
